feat: moved update product to new router
