# server/src/internal/products/free-trials/freeTrialUtils.ts
@@ -19,7 +19,7 @@ export const validateOneOffTrial = async ({
 	freeTrial,
 }: {
 	prices: Price[];
-	freeTrial: FreeTrial | null;
+	freeTrial: FreeTrial | CreateFreeTrial | null;
 }) => {
 	if (isOneOff(prices) && freeTrial) {
 		throw new RecaseError({
@@ -194,5 +194,5 @@ export const handleNewFreeTrial = async ({
 		});
 	}
 
-	return createdFreeTrial;
+	return createdFreeTrial as FreeTrial;
 };
